// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Repo.vue renders code in the preview pane for code files 1`] = `
<div
  class="columns is-gapless"
>
  <section
    class="column is-full vh-scrollable"
  >
    <div
      class="box-transparent box is-radiusless is-shadowless"
    >
      <div
        class="container view-header"
      >
        <div
          class="content"
        >
          <div
            class="level"
          >
            <h1
              class="is-marginless"
            >
              Repo
            </h1>
          </div>
        </div>
      </div>
       
      <div
        class="container view-body"
      >
        <section>
          <div
            class="columns is-gapless"
          >
            <aside
              class="column is-one-quarter vh-scrollable"
            >
              <div
                class="level"
              >
                <div
                  class="level-left"
                >
                  <div
                    class="field has-addons"
                  >
                    <div
                      class="control"
                    >
                      <a
                        class="button is-small"
                        href="#"
                      >
                        Lint
                      </a>
                    </div>
                     
                    <div
                      class="control"
                    >
                      <a
                        class="button is-small"
                        href="#"
                      >
                        Sync
                      </a>
                    </div>
                  </div>
                </div>
                 
                <div
                  class="level-right"
                >
                  <!---->
                   
                  <span
                    class="tag is-warning"
                  >
                    Unvalidated
                  </span>
                   
                  <!---->
                </div>
              </div>
               
              <!---->
               
              <p
                class="menu-label"
              >
                
              No files found
            
              </p>
               
            </aside>
             
            <div
              class="column is-three-quarters vh-scrollable"
            >
              <!---->
               
              <div
                class="js-code-preview is-paddingless code-container"
              >
                <div
                  class="has-background-white"
                >
                  <pre>
                    {
  "title": "Title"
}
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </section>
</div>
`;

exports[`Repo.vue renders markdown in the preview pane for markdown files 1`] = `
<div
  class="columns is-gapless"
>
  <section
    class="column is-full vh-scrollable"
  >
    <div
      class="box-transparent box is-radiusless is-shadowless"
    >
      <div
        class="container view-header"
      >
        <div
          class="content"
        >
          <div
            class="level"
          >
            <h1
              class="is-marginless"
            >
              Repo
            </h1>
          </div>
        </div>
      </div>
       
      <div
        class="container view-body"
      >
        <section>
          <div
            class="columns is-gapless"
          >
            <aside
              class="column is-one-quarter vh-scrollable"
            >
              <div
                class="level"
              >
                <div
                  class="level-left"
                >
                  <div
                    class="field has-addons"
                  >
                    <div
                      class="control"
                    >
                      <a
                        class="button is-small"
                        href="#"
                      >
                        Lint
                      </a>
                    </div>
                     
                    <div
                      class="control"
                    >
                      <a
                        class="button is-small"
                        href="#"
                      >
                        Sync
                      </a>
                    </div>
                  </div>
                </div>
                 
                <div
                  class="level-right"
                >
                  <!---->
                   
                  <span
                    class="tag is-warning"
                  >
                    Unvalidated
                  </span>
                   
                  <!---->
                </div>
              </div>
               
              <!---->
               
              <p
                class="menu-label"
              >
                
              No files found
            
              </p>
               
            </aside>
             
            <div
              class="column is-three-quarters vh-scrollable"
            >
              <!---->
               
              <div>
                <div
                  class="js-markdown-preview has-background-white"
                >
                  <h1>
                    Title
                  </h1>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </section>
</div>
`;

exports[`Repo.vue renders no code or markdown by default 1`] = `
<div
  class="columns is-gapless"
>
  <section
    class="column is-full vh-scrollable"
  >
    <div
      class="box-transparent box is-radiusless is-shadowless"
    >
      <div
        class="container view-header"
      >
        <div
          class="content"
        >
          <div
            class="level"
          >
            <h1
              class="is-marginless"
            >
              Repo
            </h1>
          </div>
        </div>
      </div>
       
      <div
        class="container view-body"
      >
        <section>
          <div
            class="columns is-gapless"
          >
            <aside
              class="column is-one-quarter vh-scrollable"
            >
              <div
                class="level"
              >
                <div
                  class="level-left"
                >
                  <div
                    class="field has-addons"
                  >
                    <div
                      class="control"
                    >
                      <a
                        class="button is-small"
                        href="#"
                      >
                        Lint
                      </a>
                    </div>
                     
                    <div
                      class="control"
                    >
                      <a
                        class="button is-small"
                        href="#"
                      >
                        Sync
                      </a>
                    </div>
                  </div>
                </div>
                 
                <div
                  class="level-right"
                >
                  <!---->
                   
                  <span
                    class="tag is-warning"
                  >
                    Unvalidated
                  </span>
                   
                  <!---->
                </div>
              </div>
               
              <!---->
               
              <p
                class="menu-label"
              >
                
              No files found
            
              </p>
               
            </aside>
             
            <div
              class="column is-three-quarters vh-scrollable"
            >
              <div>
                <div
                  class="empty-state
              has-background-white
              has-text-centered
              is-size-4
              is-uppercase"
                >
                  
              Select a file
            
                </div>
              </div>
               
              <!---->
            </div>
          </div>
        </section>
      </div>
    </div>
  </section>
</div>
`;

exports[`Repo.vue renders the dashboard list when dashboards exist and calls getFile() when a dashboard is clicked 1`] = `
<div
  class="columns is-gapless"
>
  <section
    class="column is-full vh-scrollable"
  >
    <div
      class="box-transparent box is-radiusless is-shadowless"
    >
      <div
        class="container view-header"
      >
        <div
          class="content"
        >
          <div
            class="level"
          >
            <h1
              class="is-marginless"
            >
              Repo
            </h1>
          </div>
        </div>
      </div>
       
      <div
        class="container view-body"
      >
        <section>
          <div
            class="columns is-gapless"
          >
            <aside
              class="column is-one-quarter vh-scrollable"
            >
              <div
                class="level"
              >
                <div
                  class="level-left"
                >
                  <div
                    class="field has-addons"
                  >
                    <div
                      class="control"
                    >
                      <a
                        class="button is-small"
                        href="#"
                      >
                        Lint
                      </a>
                    </div>
                     
                    <div
                      class="control"
                    >
                      <a
                        class="button is-small"
                        href="#"
                      >
                        Sync
                      </a>
                    </div>
                  </div>
                </div>
                 
                <div
                  class="level-right"
                >
                  <!---->
                   
                  <span
                    class="tag is-warning"
                  >
                    Unvalidated
                  </span>
                   
                  <!---->
                </div>
              </div>
               
              <!---->
               
              <p
                class="menu-label"
              >
                
              No files found
            
              </p>
               
              <p
                class="menu-label"
              >
                
              Dashboards
            
              </p>
               
              <ul
                class="menu-list"
              >
                <li>
                  <div
                    class="columns is-vcentered"
                  >
                    <div
                      class="column"
                    >
                      <a
                        class="js-dashboards-some"
                      >
                        
                        Some
                      
                      </a>
                    </div>
                     
                    <div
                      class="column is-one-fifth"
                    >
                      <a
                        class="button is-secondary is-light is-small is-pulled-right"
                        href="/dashboards/dashboard/some"
                      >
                        <font-awesome-icon-stub
                          icon="arrow-right"
                        />
                      </a>
                    </div>
                  </div>
                </li>
              </ul>
            </aside>
             
            <div
              class="column is-three-quarters vh-scrollable"
            >
              <!---->
               
              <div
                class="js-code-preview is-paddingless code-container"
              >
                <div
                  class="has-background-white"
                >
                  <pre>
                    {
  "title": "Title"
}
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </section>
</div>
`;

exports[`Repo.vue renders the document list when documents exist and calls getFile() when a document is clicked 1`] = `
<div
  class="columns is-gapless"
>
  <section
    class="column is-full vh-scrollable"
  >
    <div
      class="box-transparent box is-radiusless is-shadowless"
    >
      <div
        class="container view-header"
      >
        <div
          class="content"
        >
          <div
            class="level"
          >
            <h1
              class="is-marginless"
            >
              Repo
            </h1>
          </div>
        </div>
      </div>
       
      <div
        class="container view-body"
      >
        <section>
          <div
            class="columns is-gapless"
          >
            <aside
              class="column is-one-quarter vh-scrollable"
            >
              <div
                class="level"
              >
                <div
                  class="level-left"
                >
                  <div
                    class="field has-addons"
                  >
                    <div
                      class="control"
                    >
                      <a
                        class="button is-small"
                        href="#"
                      >
                        Lint
                      </a>
                    </div>
                     
                    <div
                      class="control"
                    >
                      <a
                        class="button is-small"
                        href="#"
                      >
                        Sync
                      </a>
                    </div>
                  </div>
                </div>
                 
                <div
                  class="level-right"
                >
                  <!---->
                   
                  <span
                    class="tag is-warning"
                  >
                    Unvalidated
                  </span>
                   
                  <!---->
                </div>
              </div>
               
              <!---->
               
              <p
                class="menu-label"
              >
                
              No files found
            
              </p>
               
              <p
                class="menu-label"
              >
                
              Documents
            
              </p>
               
              <ul
                class="menu-list"
              >
                <li>
                  <div
                    class="columns is-vcentered"
                  >
                    <div
                      class="column"
                    >
                      <a
                        class="js-documents-readme"
                      >
                        
                        README
                      
                      </a>
                    </div>
                     
                    <!---->
                  </div>
                </li>
              </ul>
            </aside>
             
            <div
              class="column is-three-quarters vh-scrollable"
            >
              <!---->
               
              <div
                class="js-code-preview is-paddingless code-container"
              >
                <div
                  class="has-background-white"
                >
                  <pre>
                    {
  "title": "Title"
}
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </section>
</div>
`;

exports[`Repo.vue renders the report list when reports exist and calls getFile() when a report is clicked 1`] = `
<div
  class="columns is-gapless"
>
  <section
    class="column is-full vh-scrollable"
  >
    <div
      class="box-transparent box is-radiusless is-shadowless"
    >
      <div
        class="container view-header"
      >
        <div
          class="content"
        >
          <div
            class="level"
          >
            <h1
              class="is-marginless"
            >
              Repo
            </h1>
          </div>
        </div>
      </div>
       
      <div
        class="container view-body"
      >
        <section>
          <div
            class="columns is-gapless"
          >
            <aside
              class="column is-one-quarter vh-scrollable"
            >
              <div
                class="level"
              >
                <div
                  class="level-left"
                >
                  <div
                    class="field has-addons"
                  >
                    <div
                      class="control"
                    >
                      <a
                        class="button is-small"
                        href="#"
                      >
                        Lint
                      </a>
                    </div>
                     
                    <div
                      class="control"
                    >
                      <a
                        class="button is-small"
                        href="#"
                      >
                        Sync
                      </a>
                    </div>
                  </div>
                </div>
                 
                <div
                  class="level-right"
                >
                  <!---->
                   
                  <span
                    class="tag is-warning"
                  >
                    Unvalidated
                  </span>
                   
                  <!---->
                </div>
              </div>
               
              <!---->
               
              <p
                class="menu-label"
              >
                
              No files found
            
              </p>
               
              <p
                class="menu-label"
              >
                
              Reports
            
              </p>
               
              <ul
                class="menu-list"
              >
                <li>
                  <div
                    class="columns is-vcentered"
                  >
                    <div
                      class="column"
                    >
                      <a
                        class="js-reports-some"
                      >
                        
                        Some
                      
                      </a>
                    </div>
                     
                    <div
                      class="column is-one-fifth"
                    >
                      <a
                        class="button is-secondary is-light is-small is-pulled-right"
                        href="/analyze/carbon/region/reports/report/some"
                      >
                        <font-awesome-icon-stub
                          icon="arrow-right"
                        />
                      </a>
                    </div>
                  </div>
                </li>
              </ul>
            </aside>
             
            <div
              class="column is-three-quarters vh-scrollable"
            >
              <!---->
               
              <div
                class="js-code-preview is-paddingless code-container"
              >
                <div
                  class="has-background-white"
                >
                  <pre>
                    {
  "title": "Title"
}
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </section>
</div>
`;

exports[`Repo.vue renders the table list when tables exist and calls getFile() when a table is clicked 1`] = `
<div
  class="columns is-gapless"
>
  <section
    class="column is-full vh-scrollable"
  >
    <div
      class="box-transparent box is-radiusless is-shadowless"
    >
      <div
        class="container view-header"
      >
        <div
          class="content"
        >
          <div
            class="level"
          >
            <h1
              class="is-marginless"
            >
              Repo
            </h1>
          </div>
        </div>
      </div>
       
      <div
        class="container view-body"
      >
        <section>
          <div
            class="columns is-gapless"
          >
            <aside
              class="column is-one-quarter vh-scrollable"
            >
              <div
                class="level"
              >
                <div
                  class="level-left"
                >
                  <div
                    class="field has-addons"
                  >
                    <div
                      class="control"
                    >
                      <a
                        class="button is-small"
                        href="#"
                      >
                        Lint
                      </a>
                    </div>
                     
                    <div
                      class="control"
                    >
                      <a
                        class="button is-small"
                        href="#"
                      >
                        Sync
                      </a>
                    </div>
                  </div>
                </div>
                 
                <div
                  class="level-right"
                >
                  <!---->
                   
                  <span
                    class="tag is-warning"
                  >
                    Unvalidated
                  </span>
                   
                  <!---->
                </div>
              </div>
               
              <!---->
               
              <p
                class="menu-label"
              >
                
              No files found
            
              </p>
               
              <p
                class="menu-label"
              >
                
              Tables
            
              </p>
               
              <ul
                class="menu-list"
              >
                <li>
                  <div
                    class="columns is-vcentered"
                  >
                    <div
                      class="column"
                    >
                      <a
                        class="js-tables-episodes"
                      >
                        
                        episodes
                      
                      </a>
                    </div>
                     
                    <!---->
                  </div>
                </li>
              </ul>
            </aside>
             
            <div
              class="column is-three-quarters vh-scrollable"
            >
              <!---->
               
              <div
                class="js-code-preview is-paddingless code-container"
              >
                <div
                  class="has-background-white"
                >
                  <pre>
                    {
  "title": "Title"
}
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </section>
</div>
`;

exports[`Repo.vue renders the topic list when topics exist and calls getFile() when a topic is clicked 1`] = `
<div
  class="columns is-gapless"
>
  <section
    class="column is-full vh-scrollable"
  >
    <div
      class="box-transparent box is-radiusless is-shadowless"
    >
      <div
        class="container view-header"
      >
        <div
          class="content"
        >
          <div
            class="level"
          >
            <h1
              class="is-marginless"
            >
              Repo
            </h1>
          </div>
        </div>
      </div>
       
      <div
        class="container view-body"
      >
        <section>
          <div
            class="columns is-gapless"
          >
            <aside
              class="column is-one-quarter vh-scrollable"
            >
              <div
                class="level"
              >
                <div
                  class="level-left"
                >
                  <div
                    class="field has-addons"
                  >
                    <div
                      class="control"
                    >
                      <a
                        class="button is-small"
                        href="#"
                      >
                        Lint
                      </a>
                    </div>
                     
                    <div
                      class="control"
                    >
                      <a
                        class="button is-small"
                        href="#"
                      >
                        Sync
                      </a>
                    </div>
                  </div>
                </div>
                 
                <div
                  class="level-right"
                >
                  <!---->
                   
                  <span
                    class="tag is-warning"
                  >
                    Unvalidated
                  </span>
                   
                  <!---->
                </div>
              </div>
               
              <!---->
               
              <!---->
               
              <p
                class="menu-label"
              >
                
              Topics
            
              </p>
               
              <ul
                class="menu-list"
              >
                <li>
                  <div
                    class="columns is-vcentered"
                  >
                    <div
                      class="column"
                    >
                      <a
                        class="is-active js-topics-carbon"
                      >
                        
                        carbon
                      
                      </a>
                    </div>
                     
                    <!---->
                  </div>
                </li>
              </ul>
            </aside>
             
            <div
              class="column is-three-quarters vh-scrollable"
            >
              <!---->
               
              <div
                class="js-code-preview is-paddingless code-container"
              >
                <div
                  class="has-background-white"
                >
                  <pre>
                    {
  "title": "Title"
}
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </section>
      </div>
    </div>
  </section>
</div>
`;
